# coolclis

./: Cargo.toml  README.md  cli-tools.json
.github/workflows/: release.yml
data/: cli-tools.json
src/: config.rs  downloader.rs  lib.rs  main.rs  unpack.rs
