[package]
name = "coolclis"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
dirs = "6.0.0"
zip = "4.0.0"
tar = "0.4.44"
flate2 = "1.1.1"
anyhow = "1.0.98"
indicatif = "0.17.11"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
